# fedlab

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
configs/profiles/: bloodmnist_baseline.yaml  dermamnist_extension.yaml  pathmnist_extension.yaml
configs/training/: bloodmnist.yaml  dermamnist.yaml  pathmnist.yaml
docs/: language-analysis.md  release-readiness.md
notebooks/: convergence_analysis.ipynb
scripts/: audit_medmnist.py  docker_smoke.py  execute_notebook.py  partition_medmnist.py  prepare_medmnist.py  preprocess_medmnist.py  run_centralized_training.py  run_local_distributed.py  run_phase_profile.py  run_simulation.py  sim_smoke.py  validate_hardware_modes.py
src/: __init__.py
src/client/: __init__.py  app.py  hf_client.py  simulation.py
src/ml/: __init__.py  audit.py  centralized.py  config.py  data.py  hardware.py  metrics.py  model.py  partition.py  preprocess.py  run_profile.py  serialization.py  trainer.py
src/monitor/: app.py  control.py  db.py  emitter.py  schema.py  store.py  ws.py
src/server/: app.py  artifacts.py  config.py  strategy.py
tests/integration/: test_simulation_multiround.py  test_simulation_pipeline.py
tests/unit/: test_client_app.py  test_data_audit.py  test_deit_model.py  test_execute_notebook.py  test_hardware_validation.py  test_hf_client.py  test_medmnist_data.py  test_monitor_app.py  test_monitor_control.py  test_monitor_schema.py  (+9 more)
(+14 files in other folders)
