[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fedforge"
version = "0.1.0"
description = "Federated learning portfolio project with Hugging Face training pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FedForge Team" }]
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.21.0",
  "evaluate>=0.4.3",
  "fastapi>=0.115.0",
  "flwr>=1.10.0",
  "httpx>=0.28.0",
  "medmnist>=2.2.3",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "sqlalchemy>=2.0.0",
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
